trivial tweak in hopes of triggering travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+# Continuous Integration build configuration
 # cribbed from travis-ci/travis-ci-rust-example
 # https://github.com/travis-ci/travis-ci-rust-example/blob/master/.travis.yml
 language: rust
