--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,6 @@
 # cribbed from travis-ci/travis-ci-rust-example
 # https://github.com/travis-ci/travis-ci-rust-example/blob/master/.travis.yml
 language: rust
+install:
+  sudo apt-get update -qq
+  sudo apt-get install -y libsqlite3-dev
