--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@
 # https://github.com/travis-ci/travis-ci-rust-example/blob/master/.travis.yml
 language: rust
 install:
-  sudo apt-get update -qq
-  sudo apt-get install -y libsqlite3-dev
+  - sudo apt-get update -qq
+  - sudo apt-get install -y libsqlite3-dev
