for compatibility with sqlite 3.7.9 (e.g. Ubuntu 12.04), don't use sqlite_close_v2   - document failure SqliteConnection::drop failure condition

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@
 # cribbed from travis-ci/travis-ci-rust-example
 # https://github.com/travis-ci/travis-ci-rust-example/blob/master/.travis.yml
 language: rust
-install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -y libsqlite3-dev
+
+# We rely on libsqlite3-dev, which seems to be part of the default
+# travis-ci build environment.
