--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,16 @@
 # Continuous Integration build configuration
-# cribbed from travis-ci/travis-ci-rust-example
-# https://github.com/travis-ci/travis-ci-rust-example/blob/master/.travis.yml
+# cribbed from travis-ci/travis-ci-rust-example and rust-ci docs
+#  - https://github.com/travis-ci/travis-ci-rust-example/blob/master/.travis.yml
+#  - http://www.rust-ci.org/p/390/artifactconf
+
+env:
+  global:
+    - secure: m2iDrN+Y6m/MvPA3qGK7CdBgkx4rSoW+SZATdH1DhAl6kaPWmv18u6iSj8zf5g+/cFyubgt6HIfKJm0WBZr/vdAIP9qtVBTAkAXocg0ntCmCnt0giwph8WSo1SfFu/oX/Yy4vDwsuJNS73j8dPXN7rl4Nf3CC6kcRKjg2o6JaT4=
+
 language: rust
 
 # We rely on libsqlite3-dev, which seems to be part of the default
 # travis-ci build environment.
+
+after_script:
+  - curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
