--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 
 name = "rust-sqlite"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Dan Connolly <dckc@madmode.com>"]
+keywords = ["database", "sql"]
 
 exclude = [
     ".hg/*",
