--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ script:
       travis-cargo build &&
       travis-cargo test &&
       travis-cargo bench &&
-      travis-cargo --only stable doc
+      travis-cargo --only stable --no-deps doc
 after_success:
   - travis-cargo --only stable doc-upload
 
