--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,13 @@ rust:
 before_script:
   - |
       pip install 'travis-cargo<0.2' --user &&
-      export PATH=$HOME/.local/bin:$PATH
+      (cargo install rustfmt || true) &&
+      export PATH=$HOME/.local/bin:~/.cargo/bin:$PATH
 
 # the main build
 script:
   - |
+      cargo fmt -- --write-mode=diff &&
       travis-cargo build &&
       travis-cargo test &&
       travis-cargo bench &&
